Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Zope 3.3.2 (unreleased)

    Bugfixes

      - zope.testing: moved import of the pystone module due a import
        conflict with the Zope 2 testrunner
        (http://www.zope.org/Collectors/Zope/2268)

      - Added ObjectModifiedEvent when a text file object is modified
        through the edit form in the ZMI.

    Restructuring

      - Changed default charset of text file (``zope.app.file.file``)
        to utf-8.

  Zope 3.3.1 (2007-01-14)

    Bugfixes

      - Fixed widget bug in zope.app.form.browser; _getCurrentValue always
        returns an input value now. This fixes a bug in _getFormValue.

        (This required a backport of a small restructuring: Changed internal
        widget API to allow retrieving the current value (from request,
        default or current field value) in addition to the current form
        representation of the value.)

      - Fixed bug #707: "layer" directive was marked as deprecated in a
        confusing way.

      - Fixed bug #728: Able to change-dir into non-existant directories using
        FTP

      - Fixed bug #717: formlib raised FormError when schema fields were
        missing from a request although not required.

      - Fixed bug #738: RestrictedPython was unable to parse
        Unicode expressions correctly (as passed in from e.g. ZPTPages).

      - Fixed bug #723: Testbrowser was handling multiple submit buttons with
        the same name incorrectly.

      - Fixed HTML rendered by ItemsMultiDisplayWidget: The 'name' attribute
        is not allowed in list tags and 'type' has a different meaning.

      - Fileresources now also set the Cache-control headers on 304
        responses. This speeds up page loads a lot on pages with many
        resources.
